Rename app and update onboarding strings
Updated app name and onboarding text to reflect new branding. Changed developer name and GitHub link.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name" translatable="false">SheGuard</string>
+    <string name="app_name" translatable="false">SheShield</string>
     <string name="app_moto">Your safety in your hands</string>
 
-    <string name="onboarding_slide1_title">Welcome to SheGuard</string>
+    <string name="onboarding_slide1_title">Welcome to SheShield</string>
     <string name="onboarding_slide1_subtitle">Your personal guardian app for women\'s safety</string>
-    <string name="onboarding_slide1_desc">SheGuard empowers and protects you. Let\'s start your journey toward safety and peace of mind.</string>
+    <string name="onboarding_slide1_desc">SheShield empowers and protects you. Let\'s start your journey toward safety and peace of mind.</string>
     <string name="onboarding_slide2_title">Your Safety, Your Way</string>
     <string name="onboarding_slide2_subtitle">Customized protection at your fingertips</string>
-    <string name="onboarding_slide2_desc">Tailor SheGuard to your preferences, choosing the features that matter most.</string>
+    <string name="onboarding_slide2_desc">Tailor SheShield to your preferences, choosing the features that matter most.</string>
     <string name="onboarding_slide3_title">A Supportive Community</string>
     <string name="onboarding_slide3_subtitle">Be more independent and feel the happiness</string>
     <string name="onboarding_slide3_desc">Join our community of strong women, access resources, and stand together for safety and empowerment.</string>
@@ -56,9 +56,9 @@
     <string name="effortless_registration">Effortless Registration</string>
     <string name="effortless_registration_desc">Join our community swiftly with our hassle-free, multi-option registration process. Your safety is just moments away.</string>
     <string name="automatic_alerts">Automatic Alerts</string>
-    <string name="automatic_alerts_desc">SheGuard provides you with an instant lifeline. A simple press of the SOS button sends automated SMS alerts to your selected contacts, including your precise location.</string>
+    <string name="automatic_alerts_desc">SheShield provides you with an instant lifeline. A simple press of the SOS button sends automated SMS alerts to your selected contacts, including your precise location.</string>
     <string name="meet_the_developer">Meet The Developer</string>
-    <string name="dev_name">Mahmudul Hasan Khan</string>
+    <string name="dev_name">KATA NITHIN</string>
     <string name="dev_bio">Passionate Android Developer\nOpen-source contributor</string>
     <string name="github">Github</string>
     <string name="contact_empty">Contact list is empty</string>
@@ -101,7 +101,7 @@
     <string name="call_emergency_service">Call emergency service</string>
     <string name="call_emergency_service_desc">Automatically call national emergency service in emergency mode.</string>
     <string name="btn_resend_email">Resend Email</string>
-    <string name="dev_github_link" translatable="false">https://github.com/Mahmud0808</string>
+    <string name="dev_github_link" translatable="false">https://github.com/nithin-kata</string>
     <string name="remove_contact_confirmation">Are you sure you want to remove this contact?</string>
     <string name="contact_removed_successfully">Contact removed successfully</string>
     <string name="yes">Yes</string>
@@ -130,27 +130,36 @@
     <string name="password_does_not_match">Password does not match</string>
     <string name="password_constraints">Password must contain at least 8 characters, 1 digit, 1 lower case letter, 1 upper case letter and no white spaces</string>
 
-    <string name="safety_tips_tip_1">Be Alert! Scan the area as you walk. Be aware of your surroundings and walk with confidence.</string>
-    <string name="safety_tips_tip_2">Avoid shopping alone. Try to shop with a friend or relative.</string>
-    <string name="safety_tips_tip_3">Know your surroundings. Keep an eye on the people in front of you as well as behind you.</string>
-    <string name="safety_tips_tip_4">Carry your purse close to your body and do not leave it unattended.</string>
-    <string name="safety_tips_tip_5">Try not to carry too many packages. Place all packages out of sight in your vehicle, preferably in the trunk.</string>
-    <string name="safety_tips_tip_6">Park your vehicle in a well-lighted area. Even in daylight hours, you may want to park near a light pole so if you leave when it is darker, your car will be in a well-lit location.</string>
-    <string name="safety_tips_tip_7">Approach your vehicle with your keys already in your hand. Keep your vehicle doors locked and your windows shut.  Look around, under and in your car, especially the back seat, before you get in.</string>
-    <string name="safety_tips_tip_8">When leaving a business late at night, (if available) ask a security guard to walk you to your car. Do not go up to just any security guard. Go directly to the kiosk and ask for them to assign an officer to escort you. Predators sometimes dress up to resemble security or other authority figures.</string>
-    <string name="safety_tips_tip_9">When a business requests you to confirm your home address, whisper it to them. Broadcasting your home address among strangers in the line could compromise your safety.</string>
-    <string name="safety_tips_tip_10">When checking into a hotel room, if the person at the front desk says your room number out loud, ask them to give you a new room and write the number on a piece of paper. Or when you check-in, ask up front to not say your room number out loud. Your room number should be your business only.</string>
-    <string name="safety_tips_tip_11">Before entering your hotel room, make sure no one is lingering in the hallway.</string>
-    <string name="safety_tips_tip_12">Always immediately lock your hotel room door after you enter.</string>
-    <string name="safety_tips_tip_13">If you call for room service, and you get a knock on your door, do not immediately open the door. Ask: "Who is it?" Make the person on the other side of the door tell you who they are before you open it. If in doubt do not open the door and call the front desk.</string>
-    <string name="safety_tips_tip_14">When asking for directions and someone offers to show you the way by having you follow them, do not go. Just ask for them to point you in the right direction. Often, predators just want to lure you to a place less crowded where your calls for help can\'t be heard.</string>
-    <string name="safety_tips_tip_15">Always pour your own drink at a party and bring it with you everywhere…even to the bathroom. This will make it more difficult for someone to drug you via your drink.</string>
-    <string name="safety_tips_tip_16">If you choose to partake in drinking alcohol, remember to have a designated driver.</string>
-    <string name="safety_tips_tip_17">Watch the bartender as he or she pours your drink. To be extra safe, drink wine instead of a cocktail. Mixed drinks take longer to make. You could be easily distracted and miss the bartender  (who could be working with a predator) or someone else placing something in your drink.</string>
-    <string name="safety_tips_tip_18">When going out with your friends, decide beforehand you will stick together. Do not let your friend go off alone with any person.</string>
-    <string name="safety_tips_tip_19">Don\'t check-in on social media apps when you arrive somewhere. Instead, check in as you leave. This way no one will be able to digitally stalk you and know your every move or when you\'re not at home. Along the same lines, avoid tweeting or using Facebook from vacation, especially if your account is public, as it is a way of letting the world know your home is unoccupied.</string>
-    <string name="safety_tips_tip_20">When you move into a new residence, check areas for possible hidden cameras. Your landlord, previous tenant or previous owner could be spying on you.</string>
-    <string name="safety_tips_tip_21">Unfortunately, no matter how diligently we practice awareness and avoidance techniques, we may find ourselves in a physical confrontation. If available, it is suggested to take self defense training.</string>
+    <string name="safety_tips_tip_1">Stay alert and scan your surroundings while walking or traveling.</string>
+    <string name="safety_tips_tip_2">Prefer well-lit, busy paths and avoid isolated shortcuts.</string>
+    <string name="safety_tips_tip_3">Share your live location with someone you trust when entering unfamiliar areas.</string>
+    <string name="safety_tips_tip_4">Keep your phone charged and emergency numbers ready for one-tap calling.</string>
+    <string name="safety_tips_tip_5">Maintain distance from anyone who makes you uncomfortable—step away immediately.</string>
+    <string name="safety_tips_tip_6">Avoid loud headphones and keep your hands free to stay aware.</string>
+    <string name="safety_tips_tip_7">Note exit points and safe spots when entering buildings, cabs, or public places.</string>
+    <string name="safety_tips_tip_8">Avoid sharing personal details like home address or daily routine with strangers.</string>
+    <string name="safety_tips_tip_9">Verify cab number plate and driver photo before getting in.</string>
+    <string name="safety_tips_tip_10">Lock your house, hotel room, or vehicle immediately after entering.</string>
+    <string name="safety_tips_tip_11">If you feel followed, move into a busy store or public area instead of going home.</string>
+    <string name="safety_tips_tip_12">Use loud noise or SOS alarms to attract attention during danger.</string>
+    <string name="safety_tips_tip_13">Use simple self-defense techniques aimed at eyes, nose, or knees to escape.</string>
+    <string name="safety_tips_tip_14">Keep a coded message or safe word ready to alert trusted contacts silently.</string>
+    <string name="safety_tips_tip_15">Do not follow strangers offering help—ask for directions verbally instead.</string>
+    <string name="safety_tips_tip_16">Record audio/video discreetly when feeling unsafe and move toward people.</string>
+    <string name="safety_tips_tip_17">Stick close to women or families in lifts, buses, or isolated places.</string>
+    <string name="safety_tips_tip_18">Never leave your drink unattended at parties—carry it with you.</string>
+    <string name="safety_tips_tip_19">Avoid posting live locations online; share updates only after leaving.</string>
+    <string name="safety_tips_tip_20">Check new rooms or rented spaces for hidden cameras or suspicious devices.</string>
+    <string name="safety_tips_tip_21">Trust your instincts. If something feels unsafe, act immediately.</string>
+    <string name="safety_tips_tip_22">Identify safe spots in your area, like open shops or public spaces, where you can quickly move if you feel unsafe.</string>
+    <string name="safety_tips_tip_23">Always keep your phone charged and your GPS enabled when traveling alone.</string>
+    <string name="safety_tips_tip_24">Keep important documents, some cash, and a spare key hidden and easy to access if you ever need to leave quickly.</string>
+    <string name="safety_tips_tip_25">During tense situations at home, move to rooms with multiple exits and avoid dangerous areas like kitchens.</string>
+    <string name="safety_tips_tip_26">Use silent signals—like emojis, code words, or missed calls—to alert trusted people when you’re in danger.</string>
+    <string name="safety_tips_tip_27">If safe, maintain a discreet record of threatening or abusive incidents for future action.</string>
+    <string name="safety_tips_tip_28">Stay connected with local women’s helplines, neighbors, or support groups who can assist you quickly.</string>
+    <string name="safety_tips_tip_29">Trust your instincts—leave immediately if a situation feels unsafe or unpredictable.</string>
+    <string name="safety_tips_tip_30">Plan an emergency exit route from your home and practice it mentally for quick action.</string>
 
     <string name="helpline_name1">Government helpline number for Violence against women / prevention of child marriage</string>
     <string name="helpline_name2">National Emergency Hotline Number</string>
